--- a/src/styles.css
+++ b/src/styles.css
@@ -79,6 +79,11 @@ body {
     text-align: left;
 }
 
+/*---- JUSTIFY CONTENT----*/
+.justify-content-end {
+    justify-content: end;
+}
+
 /*---- PADDING ----*/
 .pl-5 {
     padding-left: 5px;
@@ -96,9 +101,18 @@ body {
     padding-right: 10px;
 }
 
+.pb-100 {
+    padding-bottom: 100px;
+}
+
 /*---- MARGIN ----*/
 .mb-50 {
     margin-bottom: 50px;
+}
+
+/*---- OBJECT FIT----*/
+.object-fit-contain {
+    object-fit: contain;
 }
 
 
